# ROS2-Bootcamp

./: README.md
bootcamp_hw1/: package.xml  setup.cfg  setup.py
bootcamp_hw1/bootcamp_hw1/: publisher.py
bootcamp_turtle_mover/: package.xml  setup.cfg  setup.py
bootcamp_turtle_mover/bootcamp_turtle_mover/: move_turtle.py
bootcamp_turtlesim_vacuum_cleaner/: package.xml  setup.cfg  setup.py
bootcamp_turtlesim_vacuum_cleaner/bootcamp_turtlesim_vacuum_cleaner/: vacuum_cleaner.py  vacuum_cleaner_turtlebot.py
bootcamp_turtlesim_vacuum_cleaner/launch/: 2.py  combined_launch.py  gazebo_launch.py  rviz_launch.py
bootcamp_turtlesim_vacuum_cleaner/rviz/: turtlebot3_config.rviz
bootcamp_turtlesim_vacuum_cleaner/worlds/: vaccum_world.sdf  vacuum_world.sdf
install/: local_setup.sh  setup.sh
install/turtlesim/lib/turtlesim/: mimic  (+2 more)
log/: latest_build
move_turtle_hardware/: package.xml  setup.cfg  setup.py
move_turtle_hardware/launch/: move_turtlebot3_launch.py  move_turtlebot3_rviz_launch.py
move_turtle_hardware/move_turtle_hardware/: move_turtlebot3.py  predefined_goal.py
move_turtle_hardware/rviz/: turtlebot3_config.rviz
move_turtle_hardware/worlds/: hardware_world.sdf
my_package/: package.xml  setup.py
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/install/: local_setup.sh  setup.sh
py_pubsub/py_pubsub/log/: latest_build
py_srvcli/: setup.py
python_parameters/: package.xml  setup.py
turtlebot3_empty_world/: package.xml  setup.cfg  setup.py
turtlebot3_empty_world/launch/: empty_world_launch.py
tutorial_interfaces/: CMakeLists.txt
(+28 files in other folders)
